<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.like.LikeFragment">

    <TextView
        android:id="@+id/textViewLikeTitle"
        style="@style/textViewLikeTitle"
        android:layout_marginTop="20dp"
        android:text="@string/like_title"
        app:layout_constraintEnd_toEndOf="@id/searchViewLike"
        app:layout_constraintStart_toStartOf="@id/searchViewLike"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchViewLike"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        app:iconifiedByDefault="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLikeTitle"
        app:queryHint="@string/search_hint"
        app:searchIcon="@drawable/ic_video_game_search">
    </androidx.appcompat.widget.SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLike"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchViewLike" />

    <TextView
        android:id="@+id/textViewLikeEmptySearch"
        style="@style/textViewEmptySearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_search_title"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/textViewLikeEmptyList"
        style="@style/textViewEmptySearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_list_liked_title"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>